fix spacing and info font

--- a/_sass/_typograms.scss
+++ b/_sass/_typograms.scss
@@ -26,9 +26,7 @@
   .glyph,
   .debug text {
     /** font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace; **/
-    font-family:
-      Iosevka Fixed,
-      monospace;
+    font-family:sans-serif;
     font-size: 2.5em;
     text-anchor: middle;
     alignment-baseline: central;
